mostly resolved horizontal overflow for mobil screens

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+}
 .prod-btn a {
     color: #333;
 }
@@ -227,22 +231,26 @@ ul {
     font-size: 2vw;;
 }
 .articles {
+    
+    padding: 0;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-
+.article-image {
+    max-width: 100%;;
+}
 .article {
-    margin: 15px;
+    margin: 0 auto;
+    max-width: 100%;
 }
 .article-link {
-    width: 75px;
+    max-width: 100%;
+    margin: 0 auto;
     border: 1px solid #333;
 }
 
-.article-image-double {
-    width: 300px;
-}
 .article-image:hover {
     border: 2px solid rgb(207, 51, 51);
 }
@@ -316,6 +324,7 @@ li a:hover .article-title {
 
 /* -----Shop ---------*/
 .prod-links {
+    padding: 0;
     display: flex;
     justify-content: space-around;
 }
